Fix/bbbutton vertical alignment (#19)
* bbbutton center text container vertically

* todo

--- a/src/bbbutton/styles.module.scss
+++ b/src/bbbutton/styles.module.scss
@@ -22,6 +22,10 @@
 
 .containerText {
   margin: 0px 4px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .disabled {
